--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </P>
                 </LI>
                 <IMG SRC="IMAGES/img2.png" style="width: 100%; height: 100%;">
-                <P ALIGN="CENTER"> Fig 1.2 : Website with Unacademy ad on its home page.</P>
+                <P ALIGN="CENTER"> Fig 1.2 : Website with job ad on its home page.</P>
  
                 <LI>
                     <H5>
